Fixed sonar issues and suggested changes